--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@material-ui/core": "^4.8.3",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "clsx": "^1.0.4",
+    "date-fns": "^2.9.0",
+    "filesize": "^6.0.1",
     "history": "^4.10.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
     "prop-types": "^15.7.2",
@@ -15,10 +23,16 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-input-calendar": "^0.5.4",
     "react-input-mask": "^3.0.0-alpha.1",
+    "react-number-format": "^4.3.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-step-wizard": "^5.3.0",
+    "react-stepzilla": "^6.0.2",
+    "react-text-mask": "^5.4.3",
+    "styled-components": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
